Added some aspects For NodeController, CreateNodeController just a comment For TabController and StartController extensions for MontiArc

--- a/src/view/fxml/MontiArcView.fxml
+++ b/src/view/fxml/MontiArcView.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.layout.StackPane?>
 
-<BorderPane fx:id="borderPane" fx:controller="com.octouml.language.montiarc.MontiArcDiagramController" xmlns:fx="http://javafx.com/fxml">
+<BorderPane fx:id="borderPane" fx:controller="controller.MontiArcController" xmlns:fx="http://javafx.com/fxml">
     <top>
         <VBox>
             <ToolBar fx:id="aToolBar" orientation="HORIZONTAL">
@@ -34,7 +34,7 @@
                     <Button text="Recognize" fx:id="recognizeBtn"/>
                     <Button text="Voice" fx:id="voiceBtn"/>
                     <Button text="checkValidity" fx:id="checkValidityBtn"/>
-                </HBox>	
+                </HBox>
             </ToolBar>
         </VBox>
     </top>
