--- a/octouml/src/main/resources/view/fxml/mainView.fxml
+++ b/octouml/src/main/resources/view/fxml/mainView.fxml
@@ -13,8 +13,9 @@
         <menus>
             <Menu text="File">
                 <items>
-                    <MenuItem text="New Class Diagram" onAction="#handleMenuActionNewClassDiagram"/>
-                    <MenuItem text="New Sequence Diagram" onAction="#handleMenuActionNewSequenceDiagram"/>
+                    <MenuItem text="New Class Diagram without Validation" onAction="#handleMenuActionNewClassDiagram"/>
+                    <MenuItem text="New Sequence Diagram without Validation" onAction="#handleMenuActionNewSequenceDiagram"/>
+                    <MenuItem text="New Other Diagram with Validation" onAction="#handleMenuActionNewOtherDiagram"/>
                     <MenuItem text="Open" onAction="#handleMenuActionLoad"/>
                     <MenuItem text="Save as XMI" onAction="#handleMenuActionSave"/>
                     <MenuItem text="Save as Image" onAction="#handleMenuActionImage"/>
